--- a/game1.html
+++ b/game1.html
@@ -17,7 +17,7 @@
         <a href="index.html" class="nav-link"><img src="assets/logo.png" alt="Logo" class="navbar-logo"></a>
       </div>
       <div class="navbar-right">
-        <a href="game1.html" class="nav-link">Game 1</a>
+        <a href="game1.html" class="nav-link active">Game 1</a>
         <a href="game2.html" class="nav-link">Game 2</a>
         <a href="game3.html" class="nav-link">Game 3</a>
         <a href="game4.html" class="nav-link">Game 4</a>
@@ -32,6 +32,24 @@
       </div>
     </div>
   </nav>
+
+  <!-- =====GAME==== -->
+  <div class="game-container">
+    
+    <h2>Dealer: <span id="dealer-sum"></span></h2>
+        <div id="dealer-cards">
+            <img id="hidden" src="./cards/BACK.png">
+        </div>
+
+        <h2>You: <span id="your-sum"></span></h2>
+        <div id="your-cards"></div>
+
+        <br>
+        <button class="game-button" id="hit">Hit</button>
+        <button class="game-button" id="stay">Stay</button>
+        <p id="results"></p>
+
+  </div>
   
 </body>
 </html>
