--- a/game1.html
+++ b/game1.html
@@ -17,7 +17,7 @@
         <a href="index.html" class="nav-link"><img src="assets/logo.png" alt="Logo" class="navbar-logo"></a>
       </div>
       <div class="navbar-right">
-        <a href="game1.html" class="nav-link active">Game 1</a>
+        <a href="game1.html" class="nav-link active">Blackjack</a>
         <a href="game2.html" class="nav-link">Game 2</a>
         <a href="game3.html" class="nav-link">Game 3</a>
         <a href="game4.html" class="nav-link">Game 4</a>
@@ -34,8 +34,18 @@
   </nav>
 
   <!-- =====GAME==== -->
+  <div class="bet-container">
+        <h2>Your Bet:</h2>
+        <h2 id="bet-amnt">100</h2>
+
+        <button class="game-button" id="raise">+</button>
+        <button class="game-button" id="lower">-</button>
+        <br>
+        <br>
+        <button class="game-button" id="place-bet">Place Bet</button>
+  </div>
   <div class="game-container">
-    
+    <script src="./js/blackjack.js"></script>
     <h2>Dealer: <span id="dealer-sum"></span></h2>
         <div id="dealer-cards">
             <img id="hidden" src="./cards/BACK.png">
