--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="index.html" class="nav-link"><img src="assets/logo.png" alt="Logo" class="navbar-logo"></a>
       </div>
       <div class="navbar-right">
-        <a href="game1.html" class="nav-link">Game 1</a>
+        <a href="game1.html" class="nav-link">Blackjack</a>
         <a href="game2.html" class="nav-link">Game 2</a>
         <a href="game3.html" class="nav-link">Game 3</a>
         <a href="game4.html" class="nav-link">Game 4</a>
