--- a/game1.html
+++ b/game1.html
@@ -42,7 +42,7 @@
         <button class="game-button" id="lower">-</button>
         <br>
         <br>
-        <button class="game-button" id="place-bet">Place Bet</button>
+        <button class="game-button" id="place-bet">Lock-in Bet</button>
   </div>
   <div class="game-container">
     <script src="./js/blackjack.js"></script>
