--- a/game2.html
+++ b/game2.html
@@ -18,7 +18,7 @@
       </div>
       <div class="navbar-right">
         <a href="game1.html" class="nav-link">Blackjack</a>
-        <a href="game2.html" class="nav-link">Roulette</a>
+        <a href="game2.html" class="nav-link active">Roulette</a>
         <a href="game3.html" class="nav-link">Game 3</a>
         <a href="game4.html" class="nav-link">Game 4</a>
       </div>
@@ -32,6 +32,24 @@
       </div>
     </div>
   </nav>
+
+  <!-- =====GAME==== -->
+  <div class="bet-container">
+        <h2>Total Bet</h2>
+        <h2 id="bet-amnt">0</h2>
+        <input type="number" id="chip_cost" name="chip_cost" placeholder="Enter chip value">
+        
+        <div class="roulette-choices"></div>
+        <button class="game-button" id="place-bet">Lock-in Bet</button>
+
+  </div>
+  <div class="game-container">
+    <script src="./js/roulette.js"></script>
+    <div class="wheel-wrapper">
+        <img id="wheel" src="./img/roulette_wheel.png">
+        <div id="ball"></div>
+    </div>
+  </div>
   
 </body>
 </html>
