Added player module and slight changes to roulette

--- a/game2.html
+++ b/game2.html
@@ -27,7 +27,7 @@
 
       <div class="balance-box">
         
-        Balance: <span id="balance-amount">1000</span>
+        Balance: <span id="balance-amount"></span>
         <button class="balance-add-btn">+</button>
       </div>
     </div>
@@ -44,6 +44,7 @@
 
   </div>
   <div class="game-container">
+    <script src="./js/currencyManager.js"></script>
     <script src="./js/roulette.js"></script>
     <div class="wheel-wrapper">
         <img id="wheel" src="./img/roulette_wheel.png">
