--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       <div class="balance-box">
         
-        Balance: <span id="balance-amount">1000</span>
+        Balance: <span id="balance-amount"></span>
         <button class="balance-add-btn">+</button>
       </div>
     </div>
