--- a/game1.html
+++ b/game1.html
@@ -27,7 +27,7 @@
 
       <div class="balance-box">
         
-        Balance: <span id="balance-amount">1000</span>
+        Balance: <span id="balance-amount"></span>
         <button class="balance-add-btn">+</button>
       </div>
     </div>
@@ -45,6 +45,7 @@
         <button class="game-button" id="place-bet">Lock-in Bet</button>
   </div>
   <div class="game-container">
+    <script src="./js/currencyManager.js"></script>
     <script src="./js/blackjack.js"></script>
     <h2>Dealer: <span id="dealer-sum"></span></h2>
         <div id="dealer-cards">
