--- a/game2.html
+++ b/game2.html
@@ -14,7 +14,7 @@
   <nav class="navbar">
     <div class="navbar-container">
       <div class="navbar-left">
-        <a href="index.html" class="nav-link"><img src="assets/logo.png" alt="Logo" class="navbar-logo"></a>
+        <a href="index.html" class="nav-link"><img src="" alt="Logo" class="navbar-logo"></a>
       </div>
       <div class="navbar-right">
         <a href="game1.html" class="nav-link">Blackjack</a>
@@ -35,21 +35,24 @@
 
   <!-- =====GAME==== -->
   <div class="bet-container">
-        <h2>Total Bet</h2>
+        <h2>Your Bet</h2>
         <h2 id="bet-amnt">0</h2>
         <input type="number" id="chip_cost" name="chip_cost" placeholder="Enter chip value">
         
         <div class="roulette-choices"></div>
-        <button class="game-button" id="place-bet">Lock-in Bet</button>
-
+        <button class="game-button-new" id="place-bet">Play</button>
+        <button class="game-button-new" id="redo-bet">Redo</button>
+        <button class="game-button-new" id="reset-bet">Reset</button>
   </div>
   <div class="game-container">
     <script src="./js/currencyManager.js"></script>
     <script src="./js/roulette.js"></script>
+    <h2 id="winning-text"></h2>
     <div class="wheel-wrapper">
         <img id="wheel" src="./img/roulette_wheel.png">
         <div id="ball"></div>
     </div>
+    <h2 id="profit-text"></h2>
   </div>
   
 </body>
