Working history save/load and display in table

--- a/profile.html
+++ b/profile.html
@@ -45,7 +45,7 @@
     <div class="profile-container">
 
         <div class="profile-content">
-            <!-- dynamic content -->
+            <div class="profile-content" id="history-content"></div>
         </div>
     </div>
 
@@ -54,7 +54,7 @@
 </div>
 
 <script src="./js/currencyManager.js"></script>
-<script src="./js/history.js"></script>
+<script src="./js/profile.js"></script>
   
 </body>
 </html>
