--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>HIC Group 10</title>
 
   <link rel="stylesheet" href="css/style.css" />
+ 
 </head>
 
 <body>
@@ -32,6 +33,118 @@
       </div>
     </div>
   </nav>
-  
+  <!-- Main content -->
+  <main>
+    <div class="page-inner">
+      <!-- Left: hero + login notice -->
+      <section class="hero" aria-labelledby="hero-title">
+        <div class="hero-inner">
+          <div class="hero-kicker">Welcome to Site Name</div>
+          <h1 id="hero-title" class="hero-title">
+            A <span class="hero-highlight">for-fun casino</span> with
+            zero real-money risk.
+          </h1>
+          <p class="hero-subtitle">
+            Spin, flip and draw with a shared fake currency. Explore every game
+            in guest mode, or create a free account to track your balance,
+            history and achievements.
+          </p>
+
+          <div class="hero-alert" role="status">
+            <div class="hero-alert-icon">!</div>
+            <div>
+              You’re not logged in. <strong>Login</strong> to save your progress,
+              currency and badges — or continue playing as a guest.
+            </div>
+          </div>
+
+          <div class="hero-buttons">
+            <!-- Replace hrefs with your real login/register routes -->
+            <a class="btn btn-primary" href="/register">Register</a>
+            <a class="btn btn-outline" href="/login">Login</a>
+          </div>
+
+          <p class="hero-footnote">
+            Guest access is <strong>fully playable</strong> — only your data
+            won’t be saved between visits.
+          </p>
+        </div>
+      </section>
+
+      <!-- Right: games grid -->
+      <section id="games" class="games-section" aria-label="Available games">
+        <div class="games-header">
+          <div>
+            <div class="games-title">Featured games</div>
+            <div class="games-caption">
+              Click a game card to jump right in.
+            </div>
+          </div>
+        </div>
+
+        <div class="games-grid">
+          <!-- Coinflip -->
+          <a href="/games/coinflip" class="game-card">
+            <div class="game-thumb">
+              <div class="game-icon">🪙</div>
+            </div>
+            <div class="game-meta">
+              <div>
+                <div class="game-name">Coinflip</div>
+                <div class="game-tagline">Heads, tails & streaks.</div>
+              </div>
+              <span class="badge-pill">Fast play</span>
+            </div>
+          </a>
+
+          <!-- Roulette -->
+          <a href="/games/roulette" class="game-card">
+            <div class="game-thumb">
+              <div class="game-icon">🎡</div>
+            </div>
+            <div class="game-meta">
+              <div>
+                <div class="game-name">Roulette</div>
+                <div class="game-tagline">Red or black – you pick.</div>
+              </div>
+              <span class="badge-pill">Classic</span>
+            </div>
+          </a>
+
+          <!-- Blackjack -->
+          <a href="/games/blackjack" class="game-card">
+            <div class="game-thumb">
+              <div class="game-icon">🂡</div>
+            </div>
+            <div class="game-meta">
+              <div>
+                <div class="game-name">Blackjack</div>
+                <div class="game-tagline">Hit, stand, or bust.</div>
+              </div>
+              <span class="badge-pill">Strategy</span>
+            </div>
+          </a>
+
+          <!-- Mines -->
+          <a href="/games/mines" class="game-card">
+            <div class="game-thumb">
+              <div class="game-icon">💣</div>
+            </div>
+            <div class="game-meta">
+              <div>
+                <div class="game-name">Mines</div>
+                <div class="game-tagline">Press your luck carefully.</div>
+              </div>
+              <span class="badge-pill">High risk</span>
+            </div>
+          </a>
+        </div>
+      </section>
+    </div>
+  </main>
+
+  <footer>
+    Fake currency only · No real-money gambling · For demonstration & fun play.
+  </footer>
 </body>
 </html>
