--- a/game2.html
+++ b/game2.html
@@ -19,8 +19,8 @@
       <div class="navbar-right">
         <a href="game1.html" class="nav-link">Blackjack</a>
         <a href="game2.html" class="nav-link active">Roulette</a>
-        <a href="game3.html" class="nav-link">Game 3</a>
-        <a href="game4.html" class="nav-link">Game 4</a>
+        <a href="game3.html" class="nav-link">Mines</a>
+        <a href="game4.html" class="nav-link">Coinflip</a>
       </div>
 
       <a href="profile.html" class="nav-link"><img src="img/profile-circle-svgrepo-com.svg" alt="Logo" class="nav-profile-btn"></a>
@@ -37,7 +37,7 @@
   <div class="bet-container">
         <h2>Your Bet</h2>
         <h2 id="bet-amnt">0</h2>
-        <input type="number" id="chip_cost" name="chip_cost" placeholder="Enter chip value">
+        <input type="number" id="chip_cost" name="chip_cost" class="chip_cost" placeholder="Enter chip value">
         
         <div class="roulette-choices"></div>
         <button class="game-button-new" id="place-bet">Play</button>
