--- a/game3.html
+++ b/game3.html
@@ -17,9 +17,9 @@
         <a href="index.html" class="nav-link"><img src="assets/logo.png" alt="Logo" class="navbar-logo"></a>
       </div>
       <div class="navbar-right">
-        <a href="game1.html" class="nav-link active">Blackjack</a>
+        <a href="game1.html" class="nav-link">Blackjack</a>
         <a href="game2.html" class="nav-link">Roulette</a>
-        <a href="game3.html" class="nav-link">Mines</a>
+        <a href="game3.html" class="nav-link active">Mines</a>
         <a href="game4.html" class="nav-link">Coinflip</a>
       </div>
 
@@ -35,31 +35,20 @@
 
   <!-- =====GAME==== -->
   <div class="bet-container">
-        <h2>Your Bet:</h2>
-        <h2 id="bet-amnt">100</h2>
+        <h2>Bet Amount:</h2>
+        <input type="number" id="chip_cost" name="chip_cost" class="chip_cost" placeholder="Enter chip value" value="100">
 
-        <button class="game-button" id="raise">+</button>
-        <button class="game-button" id="lower">-</button>
+        <h2>Mines:</h2>
+        <input type="number" id="mine_count" name="mine_count" class="chip_cost" placeholder="Enter mines amount" value="6">
+
         <br>
-        <br>
+
         <button class="game-button" id="place-bet">Lock-in Bet</button>
   </div>
   <div class="game-container">
+    <div id="mines-board" class="mines-grid"></div>
     <script src="./js/currencyManager.js"></script>
-    <script src="./js/blackjack.js"></script>
-    <h2>Dealer: <span id="dealer-sum"></span></h2>
-        <div id="dealer-cards">
-            <img id="hidden" src="./cards/BACK.png">
-        </div>
-
-        <h2>You: <span id="your-sum"></span></h2>
-        <div id="your-cards"></div>
-
-        <br>
-        <button class="game-button" id="hit">Hit</button>
-        <button class="game-button" id="stay">Stay</button>
-        <p id="results"></p>
-
+    <script src="./js/mines.js"></script>
   </div>
   
 </body>
