--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <div class="navbar-right">
         <a href="game1.html" class="nav-link">Blackjack</a>
         <a href="game2.html" class="nav-link">Roulette</a>
-        <a href="game3.html" class="nav-link">Game 3</a>
-        <a href="game4.html" class="nav-link">Game 4</a>
+        <a href="game3.html" class="nav-link">Mines</a>
+        <a href="game4.html" class="nav-link">Coinflip</a>
       </div>
 
       <a href="profile.html" class="nav-link"><img src="img/profile-circle-svgrepo-com.svg" alt="Logo" class="nav-profile-btn"></a>
