mines win/loss modal + removed duplicate home page in profile

--- a/game3.html
+++ b/game3.html
@@ -54,6 +54,12 @@
     <script src="./js/currencyManager.js"></script>
     <script src="./js/mines.js"></script>
   </div>
-  
+  <div id="result-modal" class="modal hidden">
+    <div class="modal-content">
+      <h2 id="modal-title" class="modal-title"></h2>
+      <p id="modal-message" class="modal-message"></p>
+      <button id="close-modal" class="modal-close-btn">Dismiss</button>
+    </div>
+  </div>
 </body>
 </html>
