edited landing page
always use column instead of hero and features games on the left and right side.
proper hyperlinks to games from featured games buttons

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <div class="games-grid">
           <!-- Coinflip -->
-          <a href="/games/coinflip" class="game-card">
+          <a href="game4.html" class="game-card">
             <div class="game-thumb">
               <div class="game-icon">🪙</div>
             </div>
@@ -98,7 +98,7 @@
           </a>
 
           <!-- Roulette -->
-          <a href="/games/roulette" class="game-card">
+          <a href="game2.html" class="game-card">
             <div class="game-thumb">
               <div class="game-icon">🎡</div>
             </div>
@@ -112,7 +112,7 @@
           </a>
 
           <!-- Blackjack -->
-          <a href="/games/blackjack" class="game-card">
+          <a href="game1.html" class="game-card">
             <div class="game-thumb">
               <div class="game-icon">🂡</div>
             </div>
@@ -126,7 +126,7 @@
           </a>
 
           <!-- Mines -->
-          <a href="/games/mines" class="game-card">
+          <a href="game3.html" class="game-card">
             <div class="game-thumb">
               <div class="game-icon">💣</div>
             </div>
