load currency manager in index

--- a/index.html
+++ b/index.html
@@ -146,5 +146,7 @@
   <footer>
     Fake currency only · No real-money gambling · For demonstration & fun play.
   </footer>
+
+  <script src="./js/currencyManager.js"></script>
 </body>
 </html>
