--- a/game4.html
+++ b/game4.html
@@ -50,12 +50,24 @@
         <br>
         <br>
 
-        <button class="game-button" id="place-bet">Lock-in Bet</button>
+        <button class="game-button-new" id="place-bet">Lock-in Bet</button>
   </div>
   <div class="mines-game-container">
     <script src="./js/currencyManager.js"></script>
     <script src="./js/coinflip.js"></script>
   </div>
+
+  <div class="game-container">
+    <script src="./js/currencyManager.js"></script>
+    <script src="./js/coinflip.js"></script>
+    <h2 id="winning-text"></h2>
+    <div class="wheel-wrapper">
+        <img id="coin" src="./coins/coin_front.png">
+    </div>
+    <h2 id="profit-text"></h2>
+  </div>
+
+
   <div id="result-modal" class="modal hidden">
     <div class="modal-content">
       <h2 id="modal-title" class="modal-title"></h2>
