--- a/game1.html
+++ b/game1.html
@@ -14,7 +14,7 @@
   <nav class="navbar">
     <div class="navbar-container">
       <div class="navbar-left">
-        <a href="index.html" class="nav-link"><img src="assets/logo.png" alt="Logo" class="navbar-logo"></a>
+        <a href="index.html" class="nav-link"><img src="img/logo.png" alt="Logo" class="navbar-logo"></a>
       </div>
       <div class="navbar-right">
         <a href="game1.html" class="nav-link active">Blackjack</a>
@@ -38,11 +38,11 @@
         <h2>Your Bet:</h2>
         <h2 id="bet-amnt">100</h2>
 
-        <button class="game-button" id="raise">+</button>
-        <button class="game-button" id="lower">-</button>
+        <button class="game-button-new" id="raise">+</button>
+        <button class="game-button-new" id="lower">-</button>
         <br>
         <br>
-        <button class="game-button" id="place-bet">Lock-in Bet</button>
+        <button class="game-button-new" id="place-bet">Lock-in Bet</button>
   </div>
   <div class="game-container">
     <script src="./js/currencyManager.js"></script>
@@ -56,8 +56,8 @@
         <div id="your-cards"></div>
 
         <br>
-        <button class="game-button" id="hit">Hit</button>
-        <button class="game-button" id="stay">Stay</button>
+        <button class="game-button-new" id="hit">Hit</button>
+        <button class="game-button-new" id="stay">Stay</button>
         <p id="results"></p>
 
   </div>
