--- a/game2.html
+++ b/game2.html
@@ -14,7 +14,7 @@
   <nav class="navbar">
     <div class="navbar-container">
       <div class="navbar-left">
-        <a href="index.html" class="nav-link"><img src="" alt="Logo" class="navbar-logo"></a>
+        <a href="index.html" class="nav-link"><img src="img/logo.png" alt="Logo" class="navbar-logo"></a>
       </div>
       <div class="navbar-right">
         <a href="game1.html" class="nav-link">Blackjack</a>
