--- a/game3.html
+++ b/game3.html
@@ -14,7 +14,7 @@
   <nav class="navbar">
     <div class="navbar-container">
       <div class="navbar-left">
-        <a href="index.html" class="nav-link"><img src="assets/logo.png" alt="Logo" class="navbar-logo"></a>
+        <a href="index.html" class="nav-link"><img src="img/logo.png" alt="Logo" class="navbar-logo"></a>
       </div>
       <div class="navbar-right">
         <a href="game1.html" class="nav-link">Blackjack</a>
@@ -43,7 +43,7 @@
 
         <br>
 
-        <button class="game-button" id="place-bet">Lock-in Bet</button>
+        <button class="game-button-new" id="place-bet">Lock-in Bet</button>
   </div>
   <div class="mines-game-container">
     <div id="mines-board" class="mines-grid"></div>
