--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <nav class="navbar">
     <div class="navbar-container">
       <div class="navbar-left">
-        <a href="index.html" class="nav-link"><img src="assets/logo.png" alt="Logo" class="navbar-logo"></a>
+        <a href="index.html" class="nav-link"><img src="img/logo.png" alt="Logo" class="navbar-logo"></a>
       </div>
       <div class="navbar-right">
         <a href="game1.html" class="nav-link">Blackjack</a>
