--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <!-- Left: hero + login notice -->
       <section class="hero" aria-labelledby="hero-title">
         <div class="hero-inner">
-          <div class="hero-kicker">Welcome to Site Name</div>
+          <div class="hero-kicker">Welcome to Black Squirrel Games</div>
           <h1 id="hero-title" class="hero-title">
             A <span class="hero-highlight">for-fun casino</span> with
             zero real-money risk.
@@ -60,8 +60,8 @@
 
           <div class="hero-buttons">
             <!-- Replace hrefs with your real login/register routes -->
-            <a class="btn btn-primary" href="/register">Register</a>
-            <a class="btn btn-outline" href="/login">Login</a>
+            <a class="btn btn-primary" href="register.html">Register</a>
+            <a class="btn btn-outline" href="login.html">Login</a>
           </div>
 
           <p class="hero-footnote">
@@ -83,17 +83,18 @@
         </div>
 
         <div class="games-grid">
-          <!-- Coinflip -->
-          <a href="game4.html" class="game-card">
+
+          <!-- Blackjack -->
+          <a href="game1.html" class="game-card">
             <div class="game-thumb">
-              <div class="game-icon">🪙</div>
+              <div class="game-icon">♠</div>
             </div>
             <div class="game-meta">
               <div>
-                <div class="game-name">Coinflip</div>
-                <div class="game-tagline">Heads, tails & streaks.</div>
+                <div class="game-name">Blackjack</div>
+                <div class="game-tagline">Hit, stand, or bust.</div>
               </div>
-              <span class="badge-pill">Fast play</span>
+              <span class="badge-pill">Strategy</span>
             </div>
           </a>
 
@@ -111,19 +112,6 @@
             </div>
           </a>
 
-          <!-- Blackjack -->
-          <a href="game1.html" class="game-card">
-            <div class="game-thumb">
-              <div class="game-icon">🂡</div>
-            </div>
-            <div class="game-meta">
-              <div>
-                <div class="game-name">Blackjack</div>
-                <div class="game-tagline">Hit, stand, or bust.</div>
-              </div>
-              <span class="badge-pill">Strategy</span>
-            </div>
-          </a>
 
           <!-- Mines -->
           <a href="game3.html" class="game-card">
@@ -138,6 +126,22 @@
               <span class="badge-pill">High risk</span>
             </div>
           </a>
+
+          <!-- Coinflip -->
+          <a href="game4.html" class="game-card">
+            <div class="game-thumb">
+              <div class="game-icon">🪙</div>
+            </div>
+            <div class="game-meta">
+              <div>
+                <div class="game-name">Coinflip</div>
+                <div class="game-tagline">Heads, tails & streaks.</div>
+              </div>
+              <span class="badge-pill">Fast play</span>
+            </div>
+          </a>
+
+
         </div>
       </section>
     </div>
