--- a/profile.html
+++ b/profile.html
@@ -6,6 +6,7 @@
   <title>HIC Group 10</title>
 
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/profile.css" />
 </head>
 
 <body>
@@ -14,7 +15,7 @@
   <nav class="navbar">
     <div class="navbar-container">
       <div class="navbar-left">
-        <a href="index.html" class="nav-link"><img src="" alt="Logo" class="navbar-logo"></a>
+        <a href="index.html" class="nav-link"><img src="img/logo.png" alt="Logo" class="navbar-logo"></a>
       </div>
       <div class="navbar-right">
         <a href="game1.html" class="nav-link">Blackjack</a>
@@ -37,7 +38,6 @@
 
     <div class="profile-sidebar">
         <button class="profile-tab active">Profile</button>
-        <button class="profile-tab">Rewards</button>
         <button class="profile-tab">History</button>
         <button class="profile-tab logout">Log Out</button>
     </div>
@@ -45,7 +45,7 @@
     <div class="profile-container">
 
         <div class="profile-content">
-            <div class="profile-content" id="history-content"></div>
+            <div class="profile-content" id="profile-content"></div>
         </div>
     </div>
 
@@ -62,22 +62,16 @@
       <div class="brand">
         <div class="brand-logo">♜</div>
         <div class="brand-text">
-          <div class="brand-title">Site Name</div>
+          <div class="brand-title">Black Squirrel Games</div>
           <div class="brand-subtitle">Play with free casino chips</div>
         </div>
       </div>
 
       <nav class="nav">
         <div class="nav-links">
-          <a href="#" class="nav-link active">Home</a>
-          <a href="#games" class="nav-link">Games</a>
-          <a href="#" class="nav-link">How it works</a>
-          <a href="#" class="nav-link">Support</a>
         </div>
 
         <div class="nav-right">
-          <div class="guest-pill">Guest mode · Progress not saved</div>
-          <div class="profile-icon">?</div>
         </div>
       </nav>
     </div>
