--- a/register.html
+++ b/register.html
@@ -22,7 +22,7 @@
 
         <p class="auth-footer">
             Already have an account?
-            <a href="{% url 'login' %}" class="auth-link">Login</a>
+            <a href="login.html" class="auth-link">Login</a>
         </p>
     </div>
 
