--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
 
         <p class="auth-footer">
             Don't have an account?
-            <a href="{% url 'register' %}" class="auth-link">Register</a>
+            <a href="register.html" class="auth-link">Register</a>
         </p>
     </div>
 
